# cpp_project-raytracer

./: CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  input.txt  input_black_background.txt  input_black_bg.txt  presentation.url
app/: raytrace.cpp
include/: color.hpp  hittable.hpp  hittable_list.hpp  material.hpp  ray.hpp  sphere.hpp  vec3.hpp
lib/: material.cpp
